Fix Right Hand Wrapping on next line error

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
     align-items: center;
 }
 .hand img {
-    width: 300px;
+    width: 200px;
     height: auto;
 }
 .middle-content {
